# rpi-pico-example-project

./: CMakeLists.txt  README.md
src/: main.c
